syntax = "proto3";

package controller.api.v1;

option go_package = "github.com/hashicorp/watchtower/gen/controller/api;api";

message ErrorDetails {
    string trace_id = 1;
    string request_id = 2;
    repeated string request_fields = 3;
}

// Error is returned by the JSON API when an error occurs.
message Error {
    // The HTTP Status code applicable to this error.
    int32 status = 1;
    // An application-specific error string.
    string code = 2;
    // A human readable explanation specific to this occurrence of the error.
    string message = 3;
    // Additional metadata regarding the error.  Depending on the error different fields will be populated.
    ErrorDetails details = 4;
}
